# xserver-auto-renew-rs-mac

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  release.bat  release.py  requirements.txt
.github/workflows/: release.yml
launchd/: com.xrenew.timer.plist
py/: LICENSE  requirements.txt
py/xserver-auto-renew/: login.py  main.py
src/: account.rs  captcha.rs  cli.rs  client.rs  data.rs  db.rs  form.rs  logger.rs  login.rs  main.rs  ops.rs  server.rs  task.rs  update.rs  webhook.rs
src/client/: account.rs  client.rs  login.rs  mod.rs  server.rs
src/data/: data.rs  data_old.rs  mod.rs  path.rs  util.rs  value.rs
systemd/: xrenew.service  xrenew.timer
xserver-auto-renew/: main.py  settings.py
