[package]
name = "xrenew"
version = "0.1.3"
edition = "2024"
description = "free VPS auto renew for Xserver"
readme = "README.md"
repository = "https://github.com/h-sumiya/xserver-auto-renew-rs"
license = "MIT"

[dependencies]
bincode = "2.0.1"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.5.41", features = ["derive"] }
cookie_store = { version = "0.21.1" }
reqwest = { version = "0.12.22", features = ["json", "cookies", "rustls-tls"] }
reqwest_cookie_store = "0.8.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
ua_generator = "0.5.17"
url = "2.5.4"
directories = "6.0.0"
